tests/check/illegal_calls.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_call0(f32 [36, 27, 128] input, int) {
  call abc();
  parallel p by 6 {
    with index in [3, 9] {
      foreach index {
        f = dma.copy input.chunkat(p, index) => local;
      }
    }
  }
}
// CHECK: error: unable to call kernel function outside the parallel-by block(s).

__co__ auto illegal_call1(f32 [36, 27, 128] input) {
  parallel p by 6 {
    with index in [3, 4] {
      foreach index {
        f = dma.copy input.chunkat(p, index) => local;
        call abc(f);
      }
    }
  }
}
// CHECK: error: (1st) argument of type 'sync=>local f32 mdspan<3> []` can not be passed to the kernel function.

__co__ auto illegal_call2(f32 [36, 27, 128] input) {
  parallel p by 6 {
    with index in [3, 8] {
      foreach index {
        f = dma.copy input.chunkat(p, index) => local;
        call bcd(1, f.span);
      }
    }
  }
}
// CHECK: error: (2nd) argument of type 'mdspan<3> []` can not be passed to the kernel function.

__co__ auto illegal_call3(f32 [36, 27, 128] input) {
  parallel p by 6 {
    with index in [3, 12] {
      foreach index {
        f = dma.copy input.chunkat(p, index) => local;
      }
      call def(f.data, true, {4, 5});
    }
    parallel q by 4 {
      call anything([input.span(0), 1] + {1, 2});
    }
  }
}
// CHECK: error: symbol `f' is used before declaration.
// CHECK: error: in operation "dataof": expect a future type but got `invalid'.
// CHECK: error: (1st) argument of type 'invalid` can not be passed to the kernel function.
// CHECK: error: (3rd) argument of type 'ituple<2>` can not be passed to the kernel function.
// CHECK: error: (1st) argument of type 'mdspan<2> []` can not be passed to the kernel function.

__co__ auto illegal_call4() {
  parallel by 1 {
    int a = call bar();
    mutable b = call bar();
    mutable float c = call bar();
  }
}

// CHECK: error: `a' must be annotated as a mutable type.
// CHECK: error: unable to deduce the type of `b'.

// CHECK: Totally 10 errors have been detected.
